--- a/views/user/registerPage.ejs
+++ b/views/user/registerPage.ejs
@@ -5,130 +5,181 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>회원가입</title>
     <%- include("../include/head.ejs") %>
-    <style>
-      * {
-        padding: 0;
-        margin: 0;
-        border: none;
-      }
-      body {
-        font-size: 14px;
-        font-family: 'Roboto', sans-serif;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        /* height: 100vh; */
-        background-color: #ffffff;
-      }
-      .registerBox {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        box-sizing: border-box;
-        background-color: #ffffff;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        border-radius: 8px;
-        width: 1120px;
-        height: 1000px;
-      }
-      .registerWrapper {
-        width: 400px;
-        padding: 30px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-      .registerWrapper hr {
-        width: 100%;
-        margin-bottom: 20px;
-        border: 0;
-        height: 1px;
-        background-color: #006eff;
-      }
 
-      #registerForm {
-        width: 400px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-      #registerForm div {
-        width: 100%;
-      }
-      .idBox {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-end;
-      }
-
-      #registerForm input {
-        width: 100%;
-        height: 48px;
-        padding: 0 10px;
-        box-sizing: border-box;
-        margin-bottom: 16px;
-        border-radius: 6px;
-        background-color: #f8f8f8;
-      }
-
-      .loginId {
-        width: 150% !important;
-      }
-
-      /* 중복확인버튼 */
-      .idDuplicateCheckButton {
-        width: 25% !important;
-        color: #fff;
-        font-size: 16px;
-        background-color: #006eff !important;
-        margin-top: 20px;
-        cursor: pointer;
-        font-weight: 600;
-      }
-
-      .idDuplicateCheckButton:active,
-      .registerButton:active {
-        background-color: #0d4a9b !important;
-      }
-
-      .registerButton {
-        color: #fff;
-        font-size: 16px;
-        background-color: #006eff !important;
-        margin-top: 20px;
-        cursor: pointer;
-        font-weight: 600;
-      }
-
-      .registerBox label {
-        font-weight: 700;
-      }
-
-      /* .inputguide */
-      .userNameGuide,
-      .loginIdGuide,
-      .userPwGuide,
-      .userNickGuide,
-      .userPwCheckGuide,
-      .emailGuide {
-        display: none;
-        margin-bottom: 20px;
-        color: red;
-        /* font-size: 13px !important; */
-      }
-
-      .userName:focus,
-      .loginId:focus,
-      .userPw:focus,
-      .userNick:focus,
-      .email:focus,
-      .address:focus,
-      .birthday:focus {
-        outline: 3px solid #f2f2f2ef;
-        background-color: #f0f0f0 !important;
-      }
-    </style>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  </head>
+  <body class="mt-16">
+    <main class="text-sm flex justify-center items-center bg-[#ffffff] mb-10">
+      <div
+        class="registerBox flex justify-center items-center box-border bg-[#ffffff] shadow-[0_0_10px_4px_rgba(0,0,0,0.1)] rounded-lg w-[1120px] min-h-[1000px] max-h-[1400px] [&_label]:font-[700]"
+      >
+        <div
+          class="registerWrapper w-[500px] p-[30px] flex flex-col items-center"
+        >
+          <a href="/"
+            ><img
+              src="/static/image/logoImage.png"
+              alt="logoImage"
+              width="100px"
+          /></a>
+          <hr class="w-[100%] mb-[20px] border-none h-[1px] bg-[#006eff]" />
+          <form
+            id="registerForm"
+            class="w-[100%] flex flex-col items-center [&_div]:w-[100%] [&_input]:w-[100%] [&_input]:h-[48px] [&_input]:pb-[10px] [&_input]:box-border [&_input]:mb-[16px] [&_input]:bg-[#f6f6f6] [&_input]:rounded-[6px] [&_input]:pt-[10px]"
+          >
+            <div class="w-[100%]">
+              <label>
+                *이름
+                <br />
+                <input
+                  type="text"
+                  class="userName focus:outline-[3px] focus:outline-[#f2f2f2ef] focus:!bg-[#f0f0f0] pl-[8px]"
+                  name="userName"
+                  required
+                />
+                <!-- oninput="checkField(this)" -->
+
+                <!-- <span class="inputguide">*이름을 입력하세요.</span> -->
+              </label>
+            </div>
+            <div class="userNameGuide hidden mb-[20px] text-[red]">
+              *이름은 2~10글자의 한글, 영어만 사용 가능합니다.
+            </div>
+            <div class="idBox flex justify-between items-end">
+              <label>
+                *아이디
+                <br />
+                <input
+                  type="text"
+                  class="loginId !w-[175%] focus:outline-[3px] focus:outline-[#f2f2f2ef] focus:!bg-[#f0f0f0] pl-[8px]"
+                  name="loginId"
+                  required
+                />
+                <!-- oninput="checkField(this)" -->
+
+                <!-- <span class="inputguide">*아이디를 입력하세요.</span> -->
+              </label>
+              <input
+                type="button"
+                class="idDuplicateCheckButton !w-[25%] text-[#fff] text-[16px] !bg-[#006eff] mt-[20px] cursor-pointer font-[600] active:!bg-[#0d4a9b]"
+                onclick="idDuplicateCheck()"
+                value="중복체크"
+              />
+            </div>
+            <div class="loginIdGuide hidden mb-[20px] text-[red]">
+              *아이디는 6~10글자의 영문, 숫자만 사용 가능합니다.
+            </div>
+
+            <div>
+              <label>
+                *비밀번호
+                <br />
+                <input
+                  type="password"
+                  class="userPw focus:outline-[3px] focus:outline-[#f2f2f2ef] focus:!bg-[#f0f0f0] pl-[8px]"
+                  name="userPw"
+                  required
+                />
+                <!-- oninput="checkField(this)" -->
+                <!-- oninput="pwCheck()" -->
+
+                <!-- <span class="inputguide">*비밀번호를 입력하세요.</span> -->
+              </label>
+            </div>
+            <div class="userPwGuide hidden mb-[20px] text-[red]">
+              *비밀번호는 8~15글자의 영문, 숫자, 특수문자(@$!%*#?&)를 포함해야
+              합니다.
+            </div>
+
+            <div>
+              <label>
+                *비밀번호 확인
+                <br />
+                <input
+                  type="password"
+                  class="userPwCheck focus:outline-[3px] focus:outline-[#f2f2f2ef] focus:!bg-[#f0f0f0] pl-[8px]"
+                  name="userPwCheck"
+                  oninput="userPwRecheck()"
+                  required
+                />
+                <!-- oninput="pwCheck()" -->
+              </label>
+            </div>
+            <div class="userPwCheckGuide hidden mb-[20px] text-[red]">
+              *비밀번호가 일치하지 않습니다.
+            </div>
+            <div>
+              <label>
+                *별명
+                <br />
+                <input
+                  type="text"
+                  class="userNick focus:outline-[3px] focus:outline-[#f2f2f2ef] focus:!bg-[#f0f0f0] pl-[8px]"
+                  name="userNick"
+                  required
+                />
+                <!-- oninput="checkField(this)" -->
+
+                <!-- <span class="inputguide">*별명을 입력하세요.</span> -->
+              </label>
+            </div>
+            <div class="userNickGuide hidden mb-[20px] text-[red]">
+              별명은 2~10글자의 한글, 영어만 사용 가능합니다.
+            </div>
+            <div>
+              <label>
+                이메일
+                <br />
+                <input
+                  type="email"
+                  class="email focus:outline-[3px] focus:outline-[#f2f2f2ef] focus:!bg-[#f0f0f0] pl-[8px]"
+                  name="email"
+                />
+              </label>
+            </div>
+            <div class="emailGuide hidden mb-[20px] text-[red]">
+              *이메일 형식이 맞지 않습니다.
+            </div>
+
+            <div>
+              <label>
+                주소
+                <br />
+                <input
+                  type="text"
+                  class="address focus:outline-[3px] focus:outline-[#f2f2f2ef] focus:!bg-[#f0f0f0] pl-[8px]"
+                  name="address"
+                />
+              </label>
+            </div>
+
+            <div>
+              <label>
+                생일
+                <br />
+                <input
+                  type="date"
+                  class="birthday focus:outline-[3px] focus:outline-[#f2f2f2ef] focus:!bg-[#f0f0f0] pl-[8px]"
+                  name="birthday"
+                />
+              </label>
+            </div>
+
+            <div class="errorMessage" id="errorMessage">
+              <p></p>
+            </div>
+
+            <input
+              type="button"
+              class="registerButton text-[#fff] text-[16px] !bg-[#006eff] mt-[20px] cursor-pointer font-[600] active:!bg-[#0d4a9b]"
+              value="회원가입"
+              onclick="submitRegisterForm()"
+            />
+          </form>
+        </div>
+      </div>
+    </main>
+    <footer><%- include("../include/footer.ejs") %></footer>
     <script>
       let userNameValidate;
       let loginIdValidate;
@@ -377,130 +428,5 @@
         }
       }
     </script>
-  </head>
-  <body>
-    <div class="registerBox">
-      <div class="registerWrapper">
-        <a href="/"
-          ><img src="/image/logoImage.png" alt="logoImage" width="100px"
-        /></a>
-        <hr />
-        <form id="registerForm">
-          <div>
-            <label>
-              *이름
-              <br />
-              <input type="text" class="userName" name="userName" required />
-              <!-- oninput="checkField(this)" -->
-
-              <!-- <span class="inputguide">*이름을 입력하세요.</span> -->
-            </label>
-          </div>
-          <div class="userNameGuide">
-            *이름은 2~10글자의 한글, 영어만 사용 가능합니다.
-          </div>
-          <div class="idBox">
-            <label>
-              *아이디
-              <br />
-              <input type="text" class="loginId" name="loginId" required />
-              <!-- oninput="checkField(this)" -->
-
-              <!-- <span class="inputguide">*아이디를 입력하세요.</span> -->
-            </label>
-            <input
-              type="button"
-              class="idDuplicateCheckButton"
-              onclick="idDuplicateCheck()"
-              value="중복체크"
-            />
-          </div>
-          <div class="loginIdGuide">
-            *아이디는 6~10글자의 영문, 숫자만 사용 가능합니다.
-          </div>
-
-          <div>
-            <label>
-              *비밀번호
-              <br />
-              <input type="password" class="userPw" name="userPw" required />
-              <!-- oninput="checkField(this)" -->
-              <!-- oninput="pwCheck()" -->
-
-              <!-- <span class="inputguide">*비밀번호를 입력하세요.</span> -->
-            </label>
-          </div>
-          <div class="userPwGuide">
-            *비밀번호는 8~15글자의 영문, 숫자, 특수문자(@$!%*#?&)를 포함해야
-            합니다.
-          </div>
-
-          <div>
-            <label>
-              *비밀번호 확인
-              <br />
-              <input
-                type="password"
-                class="userPwCheck"
-                name="userPwCheck"
-                oninput="userPwRecheck()"
-                required
-              />
-              <!-- oninput="pwCheck()" -->
-            </label>
-          </div>
-          <div class="userPwCheckGuide">*비밀번호가 일치하지 않습니다.</div>
-          <div>
-            <label>
-              *별명
-              <br />
-              <input type="text" class="userNick" name="userNick" required />
-              <!-- oninput="checkField(this)" -->
-
-              <!-- <span class="inputguide">*별명을 입력하세요.</span> -->
-            </label>
-          </div>
-          <div class="userNickGuide">
-            별명은 2~10글자의 한글, 영어만 사용 가능합니다.
-          </div>
-          <div>
-            <label>
-              이메일
-              <br />
-              <input type="email" class="email" name="email" />
-            </label>
-          </div>
-          <div class="emailGuide">*이메일 형식이 맞지 않습니다.</div>
-
-          <div>
-            <label>
-              주소
-              <br />
-              <input type="text" class="address" name="address" />
-            </label>
-          </div>
-
-          <div>
-            <label>
-              생일
-              <br />
-              <input type="date" class="birthday" name="birthday" />
-            </label>
-          </div>
-
-          <div class="errorMessage" id="errorMessage">
-            <p></p>
-          </div>
-
-          <input
-            type="button"
-            class="registerButton"
-            value="회원가입"
-            onclick="submitRegisterForm()"
-          />
-        </form>
-      </div>
-    </div>
-    <%- include("../include/footer.ejs") %>
   </body>
 </html>
