Feat: 회원 수정 페이지 ui 작성, 프로필 초기화 기능 추가

--- a/views/posts/myPostsPage.ejs
+++ b/views/posts/myPostsPage.ejs
@@ -36,6 +36,7 @@
         </div>
       </article>
       <% } %>
+      <%- include('../include/pagination.ejs') %>
     </main>
     <%- include('../include/footer.ejs') %>
 
