--- a/views/include/pagination.ejs
+++ b/views/include/pagination.ejs
@@ -16,7 +16,7 @@
         if (firstNumber < 1) {firstNumber=1}; const next=lastNumber + 1; const prev=firstNumber - 1; %>
           <% if (pageGrop> 1) { %>
             <li>
-              <a href="/post/list/<%= prev %>/12"
+              <a href="<%= baseUrl %>/<%= prev %>/12"
                 class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border-2 border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                 <span class="sr-only">Previous</span>
                 <svg class="w-2.5 h-2.5 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
@@ -30,7 +30,7 @@
 
               <% for (let i=firstNumber; i <=lastNumber; i++) { %>
                 <li>
-                  <a href="/post/list/<%= i %>/12"
+                  <a href="<%= baseUrl %>/<%= i %>/12"
                     class="flex items-center justify-center px-3 h-8 leading-tight <%= currentPage === i ? 'text-blue-500 font-bold' : 'text-gray-500' %> bg-white border-2 border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                     <%= i %>
                   </a>
@@ -39,7 +39,7 @@
 
                   <% if (pageGrop < Math.ceil(pageCount / 5)) { %>
                     <li>
-                      <a href="/post/list/<%= next %>/12"
+                      <a href="<%= baseUrl %>/<%= next %>/12"
                         class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border-2 border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                         <span class="sr-only">Next</span>
                         <svg class="w-2.5 h-2.5 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
