--- a/views/user/profilePage.ejs
+++ b/views/user/profilePage.ejs
@@ -11,6 +11,7 @@
     />
   </head>
   <body>
+    <%- include('../include/header.ejs') %>
     <main class="px-4 sm:px-6 lg:px-52 pt-20 dark:bg-gray-900">
       <div class="flex flex-col items-center">
         <h1 class="text-xl font-bold mb-4"><%= user.userName %></h1>
@@ -105,6 +106,8 @@
         </form>
       </div>
     </main>
+    <%- include('../include/footer.ejs') %>
+
     <script>
       let isImageReset = false; // 초기화 상태를 추적하는 플래그
 
