--- a/views/posts/postsPage.ejs
+++ b/views/posts/postsPage.ejs
@@ -55,71 +55,71 @@
         .wave-one {
             width: 100%;
             height: 100%;
-            border-color: rgba(67, 163, 207, 0.8);
-            animation-duration: 6s;
+            border-color: rgba(67, 163, 207, 0.2);
+            animation-duration: 18s;
         }
 
         .wave-two {
             width: 120%;
             height: 120%;
-            border-color: rgba(99, 184, 255, 0.5);
-            animation-duration: 10s;
+            border-color: rgba(99, 184, 255, 0.3);
+            animation-duration: 30s;
         }
 
         .wave-three {
             width: 81.25%;
             height: 81.25%;
-            border-color: rgba(30, 144, 255, 0.7);
-            animation-duration: 14s;
+            border-color: rgba(30, 144, 255, 0.3);
+            animation-duration: 36s;
         }
 
         .wave-four {
             width: 81.25%;
             height: 81.25%;
             border-color: rgba(70, 130, 180, 0.1);
-            animation-duration: 14s;
+            animation-duration: 52s;
         }
 
         .wave-five {
             width: 112.5%;
             height: 112.5%;
-            border-color: rgba(173, 216, 230, 0.6);
-            animation-duration: 8s;
+            border-color: rgba(173, 216, 230, 0.1);
+            animation-duration: 24s;
         }
 
         .wave-six {
             width: 137.5%;
             height: 137.5%;
-            border-color: rgba(135, 206, 235, 0.5);
-            animation-duration: 12s;
+            border-color: rgba(135, 206, 235, 0.2);
+            animation-duration: 36s;
         }
 
         .wave-seven {
             width: 93.75%;
             height: 93.75%;
-            border-color: rgba(0, 191, 255, 0.7);
-            animation-duration: 16s;
+            border-color: rgba(0, 191, 255, 0.3);
+            animation-duration: 48s;
         }
 
         .wave-eight {
             width: 118.75%;
             height: 118.75%;
-            border-color: rgba(0, 0, 255, 0.4);
-            animation-duration: 18s;
+            border-color: rgba(0, 0, 255, 0.2);
+            animation-duration: 52s;
         }
 
         .wave-nine {
             width: 131.25%;
             height: 131.25%;
-            border-color: rgba(25, 25, 112, 0.5);
-            animation-duration: 20s;
+            border-color: rgba(25, 25, 112, 0.1);
+            animation-duration: 50s;
         }
 
         .wave-ten {
             width: 143.75%;
             height: 143.75%;
-            border-color: rgba(72, 61, 139, 0.6);
-            animation-duration: 22s;
+            border-color: rgba(72, 61, 139, 0.2);
+            animation-duration: s;
         }
 
         @keyframes move {
@@ -152,7 +152,7 @@
         /* 큰 데스크탑 및 27인치 모니터 (최대 너비 2560px) */
         @media only screen and (min-width: 1280px) and (max-width: 2560px) {
             .wrap {
-                height: 120vh; /* 원하는 값으로 변경 */
+                height: 150vh; /* 원하는 값으로 변경 */
             }
         }
 
@@ -233,8 +233,8 @@
                 <div class="wave wave-ten"></div>
             </div>
         </div>
+        <%- include('../include/footer.ejs') %>
     </div>
-    <%- include('../include/footer.ejs') %>
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
